# vynal_docs

./: .env  .gitignore  .pre-commit-config.yaml  .tesseractrc  LICENSE  README-eslint-cleaner.md  README.md  app.py  backend.py  build_frontend.py  clean-eslint.js  clean-eslint.ps1  config.json  config.py  create_placeholders.py  credentials.json.example  document_generator_backup.py  document_personnalise.txt  document_processor.py  example_usage.py  fix-useEffect-deps.js  frontend.py  index.py  install.bat  install.sh  launch.bat  launch.py  launch_admin.py  main.py  package.json  pyproject.toml  remote_config_admin.py  remove-unused-vars.js  requirements.txt  run.bat  run.py  run.sh  run_with_splash.bat  run_with_splash.py  setup.bat  (+17 more)
VynalDocsAutomator/: DocumentView.py  UsageTracker.py
admin/: __init__.py  admin_main.py
ai/: __init__.py  ai_local.py  api.py  chat_interface.py  check_encoding.py  config.json  create_test_alert.py  dashboard_integration.py  data_processor.py  document_creator.py  document_processor.py  example_monitoring.py  exception_handler.py  fix_script.py  fix_script2.py  gui.py  model.py  model_patch.py  model_patch.py.bak  predict.py  run.py  test_document_generation.py  test_model.py  universal_responder.py
backend/: package.json  server.js
config/: ai_config.json  cache_config.json  default_config.json  installation.json  logging_config.json  modules_config.json  ocr_config.json  performance.json  predictive_config.json  remote_config.json  smtp_config.json  startup.json
controllers/: __init__.py  app_controller.py  client_controller.py  client_data_extractor.py  document_analyzer_controller.py  document_controller.py  template_controller.py
data/: .key  active_user.json  activities.json  config.json  users.json  (+5 more)
(+383 files in other folders)
